<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="@color/card_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/contentImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/content_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/contentTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_percent="0.5"
            tools:src="@color/medium_gray" />

        <TextView
            android:id="@+id/contentTitle"
            style="@style/CardTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/contentDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contentImage"
            tools:text="Content Title" />

        <TextView
            android:id="@+id/contentDescription"
            style="@style/CardContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@+id/generatedByText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contentTitle"
            tools:text="Content description goes here. This can be a longer text that describes the content in detail." />

        <TextView
            android:id="@+id/generatedByText"
            style="@style/CardFooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generated_by"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/likeOverlay"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:alpha="0"
            android:contentDescription="@string/swipe_right_to_like"
            android:src="@android:drawable/ic_input_add"
            app:tint="@color/like_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/rejectOverlay"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:alpha="0"
            android:contentDescription="@string/swipe_left_to_reject"
            android:src="@android:drawable/ic_delete"
            app:tint="@color/reject_red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView> 